{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 201,
  "lineage": "0627b035-c079-ab26-2631-62cb4b513eb2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06680f97c1dcd1255",
            "arn": "arn:aws:ec2:us-east-1:470044069342:elastic-ip/eipalloc-06680f97c1dcd1255",
            "association_id": "eipassoc-0f36b1ac2e87d8f37",
            "domain": "vpc",
            "id": "eipalloc-06680f97c1dcd1255",
            "network_border_group": "us-east-1",
            "network_interface": "eni-075635f557fc92b57",
            "private_dns": "ip-10-0-1-234.ec2.internal",
            "private_ip": "10.0.1.234",
            "public_dns": "ec2-34-233-30-111.compute-1.amazonaws.com",
            "public_ip": "34.233.30.111",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cobre-notif-dev-nat-eip-1"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-nat-eip-1",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a38d6ab4547a2ec",
            "arn": "arn:aws:ec2:us-east-1:470044069342:elastic-ip/eipalloc-06a38d6ab4547a2ec",
            "association_id": "eipassoc-04b3717cdb32c524d",
            "domain": "vpc",
            "id": "eipalloc-06a38d6ab4547a2ec",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0ba8535bf80cdf69c",
            "private_dns": "ip-10-0-3-171.ec2.internal",
            "private_ip": "10.0.3.171",
            "public_dns": "ec2-52-4-215-143.compute-1.amazonaws.com",
            "public_ip": "52.4.215.143",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "cobre-notif-dev-nat-eip-2"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-nat-eip-2",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:internet-gateway/igw-0e5960a43d7624c3e",
            "id": "igw-0e5960a43d7624c3e",
            "owner_id": "470044069342",
            "tags": {
              "Name": "cobre-notif-dev-igw"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-igw",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:470044069342:loadbalancer/app/cobre-notif-dev-alb/0ff62f1304060805",
            "arn_suffix": "app/cobre-notif-dev-alb/0ff62f1304060805",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "internal-cobre-notif-dev-alb-640106501.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:470044069342:loadbalancer/app/cobre-notif-dev-alb/0ff62f1304060805",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "cobre-notif-dev-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-09d23674fbe753d52"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-07a02cb703f07b6cc"
              },
              {
                "subnet_id": "subnet-09d27e56ea3d36016"
              }
            ],
            "subnets": [
              "subnet-07a02cb703f07b6cc",
              "subnet-09d27e56ea3d36016"
            ],
            "tags": {
              "Name": "cobre-notif-dev-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-alb",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_id": "vpc-0294b60c9108314da",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:470044069342:listener/app/cobre-notif-dev-alb/0ff62f1304060805/ccb556c5f794b62d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:470044069342:targetgroup/cobre-notif-dev-tg-api/100e6d28487344c1",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:470044069342:listener/app/cobre-notif-dev-alb/0ff62f1304060805/ccb556c5f794b62d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:470044069342:loadbalancer/app/cobre-notif-dev-alb/0ff62f1304060805",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_lb.api",
            "aws_lb_target_group.api",
            "aws_security_group.alb",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:470044069342:targetgroup/cobre-notif-dev-tg-api/100e6d28487344c1",
            "arn_suffix": "targetgroup/cobre-notif-dev-tg-api/100e6d28487344c1",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200,401",
                "path": "/actuator/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 3
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:470044069342:targetgroup/cobre-notif-dev-tg-api/100e6d28487344c1",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:470044069342:loadbalancer/app/cobre-notif-dev-alb/0ff62f1304060805"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "cobre-notif-dev-tg-api",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "cobre-notif-dev-tg-api"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-tg-api",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06680f97c1dcd1255",
            "association_id": "eipassoc-0f36b1ac2e87d8f37",
            "connectivity_type": "public",
            "id": "nat-0bb2ba2fc82bad276",
            "network_interface_id": "eni-075635f557fc92b57",
            "private_ip": "10.0.1.234",
            "public_ip": "34.233.30.111",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-05560b0ba0ab50285",
            "tags": {
              "Name": "cobre-notif-dev-nat-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-nat-us-east-1a",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06a38d6ab4547a2ec",
            "association_id": "eipassoc-04b3717cdb32c524d",
            "connectivity_type": "public",
            "id": "nat-0913af0bf6abaac46",
            "network_interface_id": "eni-0ba8535bf80cdf69c",
            "private_ip": "10.0.3.171",
            "public_ip": "52.4.215.143",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0eb2321da317ec1ed",
            "tags": {
              "Name": "cobre-notif-dev-nat-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-nat-us-east-1b",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:route-table/rtb-0cfd220382cebc9d9",
            "id": "rtb-0cfd220382cebc9d9",
            "owner_id": "470044069342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0bb2ba2fc82bad276",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cobre-notif-dev-rt-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-rt-private-us-east-1a",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:route-table/rtb-0f67b6a31ca06dd58",
            "id": "rtb-0f67b6a31ca06dd58",
            "owner_id": "470044069342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0913af0bf6abaac46",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cobre-notif-dev-rt-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-rt-private-us-east-1b",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:route-table/rtb-0256ac01abb8d16fc",
            "id": "rtb-0256ac01abb8d16fc",
            "owner_id": "470044069342",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e5960a43d7624c3e",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "cobre-notif-dev-rt-public"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-rt-public",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c940a0a22179dbca",
            "route_table_id": "rtb-0cfd220382cebc9d9",
            "subnet_id": "subnet-07a02cb703f07b6cc"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b30fdb5619f5132",
            "route_table_id": "rtb-0f67b6a31ca06dd58",
            "subnet_id": "subnet-09d27e56ea3d36016"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08415511689ad36d5",
            "route_table_id": "rtb-0256ac01abb8d16fc",
            "subnet_id": "subnet-05560b0ba0ab50285"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b52344211c0d764",
            "route_table_id": "rtb-0256ac01abb8d16fc",
            "subnet_id": "subnet-0eb2321da317ec1ed"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group/sg-09d23674fbe753d52",
            "description": "ALB interno de events-api (ingreso desde VPC Link, egreso a tareas)",
            "egress": [
              {
                "cidr_blocks": [],
                "description": "8080 hacia las tareas de events-api",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022063fd8b0b8a22c"
                ],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-09d23674fbe753d52",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "HTTP 80 desde el VPC Link",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022063fd8b0b8a22c"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "cobre-notif-dev-sg-alb",
            "name_prefix": "",
            "owner_id": "470044069342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cobre-notif-dev-sg-alb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-sg-alb",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group/sg-022063fd8b0b8a22c",
            "description": "events-api (recibe por VPC Link, sale a VPC endpoints)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "443 a 0.0.0.0/0 por NAT (pull ECR/S3 + JWKS Cognito)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "443 a interface endpoints",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031c71d1a48f3572c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "80 hacia el ALB interno desde el VPC Link",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d23674fbe753d52"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "id": "sg-022063fd8b0b8a22c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "HTTP app desde VPC Link (rango de la VPC)",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "8080 desde el ALB interno",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-09d23674fbe753d52"
                ],
                "self": false,
                "to_port": 8080
              },
              {
                "cidr_blocks": [],
                "description": "HTTP 8080 desde el propio SG para VPC Link",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8080
              }
            ],
            "name": "cobre-notif-dev-sg-api",
            "name_prefix": "",
            "owner_id": "470044069342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cobre-notif-dev-sg-api"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-sg-api",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group/sg-031c71d1a48f3572c",
            "description": "Interface endpoints (443 desde api y worker)",
            "egress": [],
            "id": "sg-031c71d1a48f3572c",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "443 desde SG-api",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-022063fd8b0b8a22c"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "443 desde SG-worker",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d41d0a37254e52da"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "cobre-notif-dev-sg-endpoints",
            "name_prefix": "",
            "owner_id": "470044069342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cobre-notif-dev-sg-endpoints"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-sg-endpoints",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group/sg-0d41d0a37254e52da",
            "description": "workers (sin entrada; egreso a endpoints y a webhooks por NAT)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "443 a 0.0.0.0/0 por NAT (entrega de webhooks del cliente)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "443 a interface endpoints (SQS/Secrets/...)",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-031c71d1a48f3572c"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "id": "sg-0d41d0a37254e52da",
            "ingress": [],
            "name": "cobre-notif-dev-sg-worker",
            "name_prefix": "",
            "owner_id": "470044069342",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "cobre-notif-dev-sg-worker"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-sg-worker",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "timeouts": null,
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:subnet/subnet-07a02cb703f07b6cc",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07a02cb703f07b6cc",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "470044069342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cobre-notif-dev-private-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-private-us-east-1a",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:subnet/subnet-09d27e56ea3d36016",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d27e56ea3d36016",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "470044069342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cobre-notif-dev-private-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-private-us-east-1b",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:subnet/subnet-05560b0ba0ab50285",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05560b0ba0ab50285",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470044069342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cobre-notif-dev-public-us-east-1a"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-public-us-east-1a",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:subnet/subnet-0eb2321da317ec1ed",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb2321da317ec1ed",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "470044069342",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "cobre-notif-dev-public-us-east-1b"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-public-us-east-1b",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc/vpc-0294b60c9108314da",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c24e7e3a883873de",
            "default_route_table_id": "rtb-08402e0812204012b",
            "default_security_group_id": "sg-07e8189c5cbfc6789",
            "dhcp_options_id": "dopt-0ae32edffd4df28b5",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0294b60c9108314da",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-08402e0812204012b",
            "owner_id": "470044069342",
            "tags": {
              "Name": "cobre-notif-dev-vpc"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpc",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "dynamodb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-0deb44b454edf7e0c",
            "cidr_blocks": [
              "35.71.70.0/24",
              "3.218.182.0/24",
              "3.218.180.0/23",
              "35.71.68.0/23",
              "52.94.0.0/22",
              "52.119.224.0/20"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0deb44b454edf7e0c",
            "ip_address_type": "ipv4",
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-02cd2c6b",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cfd220382cebc9d9",
              "rtb-0f67b6a31ca06dd58"
            ],
            "service_name": "com.amazonaws.us-east-1.dynamodb",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cobre-notif-dev-vpce-dynamodb"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-dynamodb",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ecr_api",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-0cc7436d995e1c0e5",
            "dns_entry": [
              {
                "dns_name": "vpce-0cc7436d995e1c0e5-khkw3zad.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cc7436d995e1c0e5-khkw3zad-us-east-1b.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cc7436d995e1c0e5-khkw3zad-us-east-1a.api.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "api.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04552573H8SZKQTJCESL"
              },
              {
                "dns_name": "ecr.us-east-1.api.aws",
                "hosted_zone_id": "Z044458133AAH3I1QQK6R"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cc7436d995e1c0e5",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-04107d53129d41bea",
              "eni-0b25e314f1c6c46ec"
            ],
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-031c71d1a48f3572c"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.api",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.67",
                "subnet_id": "subnet-07a02cb703f07b6cc"
              },
              {
                "ipv4": "10.0.4.85",
                "subnet_id": "subnet-09d27e56ea3d36016"
              }
            ],
            "subnet_ids": [
              "subnet-07a02cb703f07b6cc",
              "subnet-09d27e56ea3d36016"
            ],
            "tags": {
              "Name": "cobre-notif-dev-vpce-ecr_api"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-ecr_api",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "ecr_dkr",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-00a01608e5323dd22",
            "dns_entry": [
              {
                "dns_name": "vpce-00a01608e5323dd22-he8wug8i.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00a01608e5323dd22-he8wug8i-us-east-1b.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00a01608e5323dd22-he8wug8i-us-east-1a.dkr.ecr.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03812991MXZR8Y6WC0PE"
              },
              {
                "dns_name": "*.dkr.ecr.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03812991MXZR8Y6WC0PE"
              },
              {
                "dns_name": "dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z04552352W985SBA26VJB"
              },
              {
                "dns_name": "*.dkr-ecr.us-east-1.on.aws",
                "hosted_zone_id": "Z04552352W985SBA26VJB"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00a01608e5323dd22",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02a37185aac1c6615",
              "eni-07d430e2490e3b8a0"
            ],
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-031c71d1a48f3572c"
            ],
            "service_name": "com.amazonaws.us-east-1.ecr.dkr",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.168",
                "subnet_id": "subnet-07a02cb703f07b6cc"
              },
              {
                "ipv4": "10.0.4.38",
                "subnet_id": "subnet-09d27e56ea3d36016"
              }
            ],
            "subnet_ids": [
              "subnet-07a02cb703f07b6cc",
              "subnet-09d27e56ea3d36016"
            ],
            "tags": {
              "Name": "cobre-notif-dev-vpce-ecr_dkr"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-ecr_dkr",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "logs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-01490c9762fc908eb",
            "dns_entry": [
              {
                "dns_name": "vpce-01490c9762fc908eb-f7sclvad.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01490c9762fc908eb-f7sclvad-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-01490c9762fc908eb-f7sclvad-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03815813U67XI5AG9PIK"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z05679842Z82ZKQFFOYDU"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z0381262VUG3HBWNZA86"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z05679892PIOKAFMGQ96D"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-01490c9762fc908eb",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-076c32ddbf362833d",
              "eni-0ae773678e8fa0bc3"
            ],
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-031c71d1a48f3572c"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.104",
                "subnet_id": "subnet-07a02cb703f07b6cc"
              },
              {
                "ipv4": "10.0.4.121",
                "subnet_id": "subnet-09d27e56ea3d36016"
              }
            ],
            "subnet_ids": [
              "subnet-07a02cb703f07b6cc",
              "subnet-09d27e56ea3d36016"
            ],
            "tags": {
              "Name": "cobre-notif-dev-vpce-logs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-logs",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "secrets",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-017b9c0498aa76ff4",
            "dns_entry": [
              {
                "dns_name": "vpce-017b9c0498aa76ff4-vow1apwo.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-017b9c0498aa76ff4-vow1apwo-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-017b9c0498aa76ff4-vow1apwo-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0546574296T1L84F7GRI"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-017b9c0498aa76ff4",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-06d4f3547f08e06e6",
              "eni-0bf18f717f0c8ed6f"
            ],
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-031c71d1a48f3572c"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.197",
                "subnet_id": "subnet-07a02cb703f07b6cc"
              },
              {
                "ipv4": "10.0.4.215",
                "subnet_id": "subnet-09d27e56ea3d36016"
              }
            ],
            "subnet_ids": [
              "subnet-07a02cb703f07b6cc",
              "subnet-09d27e56ea3d36016"
            ],
            "tags": {
              "Name": "cobre-notif-dev-vpce-secrets"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-secrets",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "sqs",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-0cb2ead33249ce688",
            "dns_entry": [
              {
                "dns_name": "vpce-0cb2ead33249ce688-rnq6yt15.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cb2ead33249ce688-rnq6yt15-us-east-1a.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0cb2ead33249ce688-rnq6yt15-us-east-1b.sqs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sqs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z04463153K33NR3PLUFUQ"
              },
              {
                "dns_name": "sqs.us-east-1.api.aws",
                "hosted_zone_id": "Z04438073JION7E07SQEA"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0cb2ead33249ce688",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-09736090314b056b9",
              "eni-0bb0aec9ba0ebbaac"
            ],
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-031c71d1a48f3572c"
            ],
            "service_name": "com.amazonaws.us-east-1.sqs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.225",
                "subnet_id": "subnet-07a02cb703f07b6cc"
              },
              {
                "ipv4": "10.0.4.160",
                "subnet_id": "subnet-09d27e56ea3d36016"
              }
            ],
            "subnet_ids": [
              "subnet-07a02cb703f07b6cc",
              "subnet-09d27e56ea3d36016"
            ],
            "tags": {
              "Name": "cobre-notif-dev-vpce-sqs"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-sqs",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": "sts",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-023e54b696c424967",
            "dns_entry": [
              {
                "dns_name": "vpce-023e54b696c424967-ckoz81zz.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-023e54b696c424967-ckoz81zz-us-east-1b.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-023e54b696c424967-ckoz81zz-us-east-1a.sts.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "sts.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0455237193H8UPLXA5ET"
              },
              {
                "dns_name": "sts.us-east-1.api.aws",
                "hosted_zone_id": "Z03824382B9MS5ZGJM2G2"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-023e54b696c424967",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-056cc187a81500d7e",
              "eni-0d7f85da3cc8b9345"
            ],
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "requester_managed": false,
            "security_group_ids": [
              "sg-031c71d1a48f3572c"
            ],
            "service_name": "com.amazonaws.us-east-1.sts",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.2.141",
                "subnet_id": "subnet-07a02cb703f07b6cc"
              },
              {
                "ipv4": "10.0.4.250",
                "subnet_id": "subnet-09d27e56ea3d36016"
              }
            ],
            "subnet_ids": [
              "subnet-07a02cb703f07b6cc",
              "subnet-09d27e56ea3d36016"
            ],
            "tags": {
              "Name": "cobre-notif-dev-vpce-sts"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-sts",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_subnet.private",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "s3",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:vpc-endpoint/vpce-06462c2000c471a93",
            "cidr_blocks": [
              "16.15.160.0/19",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18",
              "16.15.156.0/22"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-06462c2000c471a93",
            "ip_address_type": "ipv4",
            "owner_id": "470044069342",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0cfd220382cebc9d9",
              "rtb-0f67b6a31ca06dd58"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "cobre-notif-dev-vpce-s3"
            },
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Name": "cobre-notif-dev-vpce-s3",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-0294b60c9108314da"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat",
            "aws_route_table.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "alb_to_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-091d34ea7956c269d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "8080 hacia las tareas de events-api",
            "from_port": 8080,
            "id": "sgr-091d34ea7956c269d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_id": "sg-09d23674fbe753d52",
            "security_group_rule_id": "sgr-091d34ea7956c269d",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "api_to_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-0b1e0c929bde90d67",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "80 hacia el ALB interno desde el VPC Link",
            "from_port": 80,
            "id": "sgr-0b1e0c929bde90d67",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09d23674fbe753d52",
            "security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_rule_id": "sgr-0b1e0c929bde90d67",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "api_to_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-008a39c9d96b84141",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "443 a interface endpoints",
            "from_port": 443,
            "id": "sgr-008a39c9d96b84141",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-031c71d1a48f3572c",
            "security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_rule_id": "sgr-008a39c9d96b84141",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.endpoints",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "api_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-0757b73e8fcf7d183",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "443 a 0.0.0.0/0 por NAT (pull ECR/S3 + JWKS Cognito)",
            "from_port": 443,
            "id": "sgr-0757b73e8fcf7d183",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_rule_id": "sgr-0757b73e8fcf7d183",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "worker_to_endpoints",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-0dbabce0c2f836341",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "443 a interface endpoints (SQS/Secrets/...)",
            "from_port": 443,
            "id": "sgr-0dbabce0c2f836341",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-031c71d1a48f3572c",
            "security_group_id": "sg-0d41d0a37254e52da",
            "security_group_rule_id": "sgr-0dbabce0c2f836341",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "worker_to_internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-0a5bcc87c78b282ae",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "443 a 0.0.0.0/0 por NAT (entrega de webhooks del cliente)",
            "from_port": 443,
            "id": "sgr-0a5bcc87c78b282ae",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-0d41d0a37254e52da",
            "security_group_rule_id": "sgr-0a5bcc87c78b282ae",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "alb_from_vpclink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-0113f4564e2e8647a",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTP 80 desde el VPC Link",
            "from_port": 80,
            "id": "sgr-0113f4564e2e8647a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_id": "sg-09d23674fbe753d52",
            "security_group_rule_id": "sgr-0113f4564e2e8647a",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_from_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-04df0059225e67ce4",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "8080 desde el ALB interno",
            "from_port": 8080,
            "id": "sgr-04df0059225e67ce4",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-09d23674fbe753d52",
            "security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_rule_id": "sgr-04df0059225e67ce4",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb",
            "aws_security_group.api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_from_vpclink",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-00cf298021baed8fe",
            "cidr_ipv4": "10.0.0.0/16",
            "cidr_ipv6": null,
            "description": "HTTP app desde VPC Link (rango de la VPC)",
            "from_port": 8080,
            "id": "sgr-00cf298021baed8fe",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_rule_id": "sgr-00cf298021baed8fe",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "api_self_8080",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-078e29b8ff7f98e84",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "HTTP 8080 desde el propio SG para VPC Link",
            "from_port": 8080,
            "id": "sgr-078e29b8ff7f98e84",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_rule_id": "sgr-078e29b8ff7f98e84",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 8080
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "endpoints_from_api",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-0b7b92ef6dd30ac6e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "443 desde SG-api",
            "from_port": 443,
            "id": "sgr-0b7b92ef6dd30ac6e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-022063fd8b0b8a22c",
            "security_group_id": "sg-031c71d1a48f3572c",
            "security_group_rule_id": "sgr-0b7b92ef6dd30ac6e",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.api",
            "aws_security_group.endpoints",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "endpoints_from_worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:470044069342:security-group-rule/sgr-064c5c9e033e29f6e",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "443 desde SG-worker",
            "from_port": 443,
            "id": "sgr-064c5c9e033e29f6e",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-0d41d0a37254e52da",
            "security_group_id": "sg-031c71d1a48f3572c",
            "security_group_rule_id": "sgr-064c5c9e033e29f6e",
            "tags": null,
            "tags_all": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "cobre-notif",
              "Reto": "cobre-notifications"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.endpoints",
            "aws_security_group.worker",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}